--- a/bootstrap/static_answer.html
+++ b/bootstrap/static_answer.html
@@ -1,23 +1,95 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65"
-      crossorigin="anonymous"/>
-</head>
-<body>
-    
 
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
-      crossorigin="anonymous">
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous" />
+</head>
+
+<body>
+
+  <body>
+    <div class="container">
+      <div class="row align-items-center g-3 p-5">
+        <div class="form-control">
+          <table class="table">
+            <tr class="text-center">
+              <th>항목번호</th>
+              <th colspan="4">문항</th>
+            </tr>
+            <tr>
+              <th rowspan="3" class="row">
+                <div class="col">1</div>
+              </th>
+              <th colspan="4">해당 매장을 방문시 매장은 청결하였습니까?</th>
+            </tr>
+            <tr>
+              <td>(1) 전혀 아니다.</td>
+              <td>(2) 아니다.</td>
+              <td>(3) 보통이다.</td>
+              <td>(4) 그렇다.</td>
+              <td>(5) 매우 그렇다.</td>
+            </tr>
+            <tr>
+              <td>15</td>
+              <td>26</td>
+              <td>31</td>
+              <td>14</td>
+              <td>25</td>
+            </tr>
+            <tr>
+              <th rowspan="3" class="row">
+                <div class="col">2</div>
+              </th>
+              <th colspan="4">주문시 직원은 고객님께 친절하였습니까?</th>
+            </tr>
+            <tr>
+              <td>(1) 전혀 아니다.</td>
+              <td>(2) 아니다.</td>
+              <td>(3) 보통이다.</td>
+              <td>(4) 그렇다.</td>
+              <td>(5) 매우 그렇다.</td>
+            </tr>
+            <tr>
+              <td>15</td>
+              <td>26</td>
+              <td>31</td>
+              <td>14</td>
+              <td>25</td>
+            </tr>
+            <tr>
+              <th rowspan="3" class="row">
+                <div class="col">3</div>
+              </th>
+              <th colspan="4">해당 매장을 방문시 매장은 청결하였습니까?</th>
+            </tr>
+            <tr>
+              <td>(1) 전혀 아니다.</td>
+              <td>(2) 아니다.</td>
+              <td>(3) 보통이다.</td>
+              <td>(4) 그렇다.</td>
+              <td>(5) 매우 그렇다.</td>
+            </tr>
+            <tr>
+              <td>15</td>
+              <td>26</td>
+              <td>31</td>
+              <td>14</td>
+              <td>25</td>
+            </tr>
+          </table>
+        </div>
+      </div>
+    </div>
+  </body>
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous">
     </script>
 </body>
+
 </html>
