--- a/bootstrap/login.html
+++ b/bootstrap/login.html
@@ -11,6 +11,54 @@
 </head>
 
 <body>
+  <header>
+    <div class="d-flex justify-content-between">
+      <div class="container border-bottom">
+        <nav class="navbar ">
+          <a href="./index.html" class="navbar-brand"><img src="../style/image/coffee.png" width="40" alt="" />
+            KHCAFE</a>
+          <nav class="nav justify-content-center">
+            <a class="nav-link text-dark fs-6" href="./index.html">메인</a>
+            <!-- 로그인 드롭다운 -->
+            <div class="btn-group">
+              <button class="btn dropdown-toggle" type="button" id="triggerId" data-bs-toggle="dropdown"
+                aria-haspopup="true" aria-expanded="false">
+                로그인
+              </button>
+              <div class="dropdown-menu dropdown-menu-start" aria-labelledby="triggerId">
+                <a class="dropdown-item" href="./login.html">로그인</a>
+                <a class="dropdown-item" href="./signup.html">회원가입</a>
+              </div>
+            </div>
+            <!-- 로그인 드롭다운 -->
+            <!-- 설문조사 드롭다운 -->
+            <div class="btn-group">
+              <button class="btn dropdown-toggle" type="button" id="triggerId" data-bs-toggle="dropdown"
+                aria-haspopup="true" aria-expanded="false">
+                설문조사
+              </button>
+              <div class="dropdown-menu dropdown-menu-start" aria-labelledby="triggerId">
+                <a class="dropdown-item" href="./survey.html">설문조사</a>
+              </div>
+            </div>
+            <!-- 설문조사 드롭다운 -->
+            <!-- 통계 드롭다운 -->
+            <div class="btn-group">
+              <button class="btn dropdown-toggle" type="button" id="triggerId" data-bs-toggle="dropdown"
+                aria-haspopup="true" aria-expanded="false">
+                통계
+              </button>
+              <div class="dropdown-menu dropdown-menu-start" aria-labelledby="triggerId">
+                <a class="dropdown-item" href="./static_answer.html">문항별 통계</a>
+                <a class="dropdown-item" href="./static_user.html">사용자별 통계</a>
+              </div>
+            </div>
+            <!-- 통계 드롭다운 -->
+
+          </nav>
+        </nav>
+      </div>
+  </header>
   <main>
     <div class="container">
       <div class="row align-items-center g-3 p-5">
@@ -35,7 +83,14 @@
     </div>
     </div>
   </main>
+  <footer class=" pt-2  border-top fixed-bottom ">
+    <div class="container">
+      <p class="form-text text-center text-muted">
+        KH CAFE | Address : 서울시 강남구 테헤란로 130호 1F | Call☎: (02)123-4567
+      </p>
+    </div>
 
+  </footer>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous">
     </script>
