--- a/bootstrap/static_answer.html
+++ b/bootstrap/static_answer.html
@@ -61,9 +61,9 @@
   </header>
   <main>
     <div class="container">
-      <div class="row align-items-center g-3 p-5">
-        <div class="form-control">
-          <table class="table">
+      <div class="row align-items-center g-3 p-5 ">
+        <div class="form-control bg-light">
+          <table class="table ">
             <tr class="text-center">
               <th>항목번호</th>
               <th colspan="4">문항</th>
