--- a/bootstrap/static_user.html
+++ b/bootstrap/static_user.html
@@ -63,7 +63,7 @@
   <main>
     <div class="container">
       <div class="row align-items-center g-3 p-5">
-        <div class="form-control">
+        <div class="form-control bg-light">
           <table class="table text-center">
             <tr>
               <th rowspan="2">항목번호</th>
