--- a/bootstrap/end1.html
+++ b/bootstrap/end1.html
@@ -57,6 +57,7 @@
                             </div>
                         </div>
                         <!-- 통계 드롭다운 -->
+
                     </nav>
                 </nav>
             </div>
@@ -90,6 +91,9 @@
         integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous">
         </script>
 
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.min.js"
+        integrity="sha384-7VPbUDkoPSGFnVtYi0QogXtr74QeVeeIs99Qfg5YCF+TidwNdjvaKZX19NZ/e6oz" crossorigin="anonymous">
+        </script>
 </body>
 
 </html>
